style: fix layout shifting when updating player scores

--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ button {
   padding: var(--spacing-xs);
 }
 
-/* TODO: Fix layout shifting when score is updated */
 .game__player {
   display: flex;
   align-items: center;
@@ -136,6 +135,7 @@ button {
 }
 
 .player__score {
+  width: 20px;
   font-weight: var(--font-weight-black);
 }
 
